fixed header on mobile, still problems with background-image on scroll mobile

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,14 +1,16 @@
 @use './colors' as *;
 
 .header {
-	position: relative;
-	margin-top: 100px;
-	height: calc(100vh - 100px);
+	position: sticky;
+	top: 0;
+	// margin-top: 100px;
+	max-height: 100dvh;
 	background-image: url(../img/headerBGsmall.jpg);
-	background-position: center top;
+	background-position: bottom right;
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-attachment: fixed;
+	overflow: hidden;
 
 	&::after {
 		content: '';
@@ -23,7 +25,8 @@
 	}
 
 	&__container {
-		height: calc(100vh - 100px);
+		margin-top: 100px;
+		height: calc(100dvh - 100px);
 		display: flex;
 		flex-direction: column;
 		align-items: center;
